# miniature-ec-backend

./: .pre-commit-config.yaml  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
app/: .env.exmaple  Dockerfile  main.py  my.cnf  schemas.py
app/domain/: Cart.py  CartItem.py  Product.py  Products.py  Purchase.py  User.py  UserInfo.py
app/infrastructure/: PaymentService.py
app/repository/: CartItemRepository.py  CartRepository.py  ProductRepository.py  PurchaseRepository.py  UserRepository.py
app/usecase/: PurchaseUseCase.py
docker/initdb.d/: init.sql
