[project]
name = "miniature-ec-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiomysql>=0.2.0",
    "bcrypt>=4.3.0",
    "black>=25.1.0",
    "fastapi[standard]>=0.116.1",
    "flake8>=7.3.0",
    "isort>=6.0.1",
    "pre-commit>=4.2.0",
    "pyjwt>=2.10.1",
    "pytest>=8.4.1",
    "sqlalchemy>=1.4",
]

[tool.mypy]
strict = true

[tool.black]
line-length = 88
target-version = ['py311']

[tool.isort]
profile = "black"

[flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]
